--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
+<!DOCTYPE html>
 <html>
     <head>
          <meta charset="utf-8">
                  <link rel="stylesheet" type="text/css" href="style.css">
         <title>Kaya's CSC106 Web Page</title>
     </head>
-        <body background="Yellow.png">>
+        <body>
+        <body background="Yellow.png">
             <img src="csc106_banner.jpg" alt="Banner"width="1500" height="300">
              <img src="me.jpg" align=right height="200" width="160">
         <tr>
